# lerni

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
agents/: beginner.md  expert.md
docs/: PRD.md  mission.md  progress.md  roadmap.md  spec.md  todo.md
src/lerni/: __init__.py  __main__.py  cli.py  config.py  db.py  editor.py  models.py  sm2.py
src/lerni/commands/: notify.py  organize.py  question.py  review.py
tests/: __init__.py  conftest.py  test_sm2.py
